--- a/1512.01413/results.tex
+++ b/1512.01413/results.tex
@@ -37,7 +37,6 @@ The introduction of this new radio VLBI dataset will help to reveal shortcomings
 
 
 
-\vspace{-.2in}
 \paragraph{Synthetic Measurements}
 
 We provide a standardized format~\cite{ pauls2005data} dataset of over 5000 synthetic VLBI measurements corresponding to
@@ -60,12 +59,10 @@ We have deliberately included a diversity of images in the imaging database, sin
 Natural images test robustness to complex scenes with varied image statistics.
 %This robustness may prove useful when trying to reconstruct the sharp boundary of an event horizon with statistics far from that of a typical celestial image~\cite{avery}. 
 
-\vspace{-.15in}
 \paragraph{Real Measurements} We provide 33 sets of measurements from the VLBA-BU-BLAZAR Program~\cite{jorstad2005polarimetric} in the same standardized format~\cite{ pauls2005data}. 
 This program has been collecting data on a number of gamma-ray blazars every month since 2007. 
 Measurements are taken using the Very Long Baseline Array (VLBA) at 43 GHz. Although both the angular resolution and wavelength of these measurements are very different from those taken by the EHT (which collects at $\approx 230$ GHz)~\cite{fish2014imaging}, they provide a means to test algorithms on measured, experimental data. 
 
-\vspace{-.15in}
 \paragraph{Test Set and Error Metrics}
 
 We introduce a blind test set of
@@ -94,10 +91,8 @@ Since the absolute position of the emission is lost when using the bispectrum, w
 
 %This example was generated from simulated elliptical trajectories along the $(u,v)$ plane. The sampled frequency measurements along these trajectories were then extracted from the ground truth image and corrupted by noise corresponding to a standard deviation of 20 degree error in the phase and a multiplicative error of standard deviation 5\% in the amplitude, as well as phase closure error due to atmospheric inhomogeneity.  We have assumed our source is non-varying, and thus have sampled all frequency components from the same underlying image. All images shown were reconstructed with $\Delta_\ell$ and $\Delta_m$ equal to 15\% of the largest frequency from the largest telescope array (10 telescopes). All trials were run using the same parameter set, and initialized with an $8 \times 8$ image containing random noise centered at the mean flux (average intensity).
 
-\vspace{-.1in}
 \section{Results and Discussion}
 \label{section:results}
-\vspace{-.05in}
 
 
 %\begin{figure*}[ht!]
@@ -344,7 +339,6 @@ Since the absolute position of the emission is lost when using the bispectrum, w
 
 \begin{figure}[b]
 	\begin{center}
-		\vspace{-.2in}
 		\begin{tabular}{  c  c  c  c  c  }
 			
 			
@@ -379,14 +373,12 @@ Since the absolute position of the emission is lost when using the bispectrum, w
 		\end{tabular}
 		\caption{ \footnotesize{{\bf Intrinsic Maximum Resolution:} The geometry of a telescope array imposes an intrinsic maximum resolution on the image you can reconstruct from the measurements. Recovering spatial frequencies higher than this resolution is equivalent to superresolution. For results presented, the minimum recoverable fringe spacing (corresponding to the maximum frequency) is 24.72 $\mu$-arcseconds. The original `Source' images (183.82 $\mu$-arcsecond FOV) are used to synthetically generate realistic VLBI measurements. We show the effect of filtering out spatial frequencies higher than the minimum fringe spacing for these source images in `Max Res'. }}
 		\label{fig:maxres}
-		\vspace{-.3in}
 	\end{center}
 \end{figure}
 
 
 
 	\begin{figure*}[ht!]
-		\vspace{-0.2in}
 		\begin{center}
 			\begin{tabular}{  c | c  c |  c  c  c  c | c  }
 				%\hline
@@ -473,7 +465,7 @@ Since the absolute position of the emission is lost when using the bispectrum, w
 				
 				
 			\end{tabular}
-			\caption{\footnotesize{ {\bf Method Comparison: } Comparison of our algorithm, `CHIRP' to three state-of-the-art methods: `CLEAN', `SQUEEZE', and `BSMEM'. We show the normalized reconstruction of a variety of black hole (a-b), celestial (c-f), and natural (g) source images with a total flux density (sum of pixel intensities) of 1 jansky and a 183.82 $\mu$-arcsecond FOV. Since absolute position is lost when using the bispectrum, shifts in the reconstructed source location are expected. The `TARGET' image shows the ground truth emission filtered to the maximum resolution intrinsic to this telescope array.  \vspace{-.2in}  
+			\caption{\footnotesize{ {\bf Method Comparison: } Comparison of our algorithm, `CHIRP' to three state-of-the-art methods: `CLEAN', `SQUEEZE', and `BSMEM'. We show the normalized reconstruction of a variety of black hole (a-b), celestial (c-f), and natural (g) source images with a total flux density (sum of pixel intensities) of 1 jansky and a 183.82 $\mu$-arcsecond FOV. Since absolute position is lost when using the bispectrum, shifts in the reconstructed source location are expected. The `TARGET' image shows the ground truth emission filtered to the maximum resolution intrinsic to this telescope array.  
 				}}
 				\label{fig:comp}
 			\end{center}
@@ -596,7 +588,6 @@ Since the absolute position of the emission is lost when using the bispectrum, w
 					%Since absolute position is lost when using the bispectrum, shifts in the reconstructed source location are expected. 
 					}}
 			\label{fig:noise}
-			\vspace{-.3in}
 		\end{center}
 	\end{figure*}
 	
@@ -608,7 +599,6 @@ Therefore, we demonstrate the success of our algorithm, CHIRP, on a sample of sy
 
 
 
-\vspace{-.15in}
 \paragraph{Synthetic Measurements}
 For image results presented in the paper we generated synthetic data using realistic parameters for the EHT array pointed towards the black hole in M87.
 Corresponding $(u,v)$ frequency coverage is shown in Figure~\ref{fig:uvcov}b.
@@ -618,7 +608,6 @@ The geometry of an array imposes an intrinsic maximum resolution on the image yo
 These images set expectations on what is possible to reliably reconstruct from the measurements.
 Additional results and details about the telescopes, noise properties, and parameter settings can be found in the supp. material~\cite{suppmaterial}. 
 
-\vspace{-.15in}
 \paragraph{Method Comparison} We compare results from our algorithm, CHIRP, with the three state-of-the-art algorithms described in Section~\ref{sec:related}: CLEAN, SQUEEZE, and BSMEM. 
 %To eliminate bias, parameter choices for competing algorithms were discussed with their authors or knowlegeable users (provided in the supp. material)
 %To eliminate bias, images were obtained by asking either the authors of the competing algorithms or knowledgeable users for reconstruction parameters (provided in the supp. material~\cite{suppmaterial}). 
@@ -650,7 +639,6 @@ Since CLEAN cannot automatically handle large phase errors, we were unable to fa
 
 
 \begin{figure}[t!]
-		\vspace{-.25in}
 	\centering
 	\subfigure{\includegraphics[width=0.49\linewidth]
 		{blinddataset/mse.pdf}}
@@ -664,7 +652,6 @@ Since CLEAN cannot automatically handle large phase errors, we were unable to fa
 			%Images were automatically aligned and normalized before each error metric was computed. 
 		}}
 	\label{fig:resultnums}
-	\vspace{-0.23in}
 \end{figure}
 
 
@@ -693,7 +680,6 @@ Since CLEAN cannot automatically handle large phase errors, we were unable to fa
 %	\end{table}
 
 
-\vspace{-.15in}
 \paragraph{Noise Sensitivity} The standard deviation of thermal noise introduced in each measured visibility is fixed based on measurement choices and the corresponding telescopes' properties. Specifically, $\sigma = \frac{1}{0.88} \sqrt{ {\rho_1 \rho_2 }/{ \nu T } } $ for bandwidth $\nu$, integration time $T$, and each telescope's System Equivalent Flux Density ($\rho$).
 %\footnote{The $\frac{1}{0.88}$ factor is due to quantization in the A/D converter CITATION}.
 Consequently, an emission with a lower total flux will result in a lower SNR signal.
@@ -770,7 +756,6 @@ Figure~\ref{fig:noise} shows the effect of varying total flux density, and thus 
  
  \begin{figure}[b]
  	\begin{center}
- 		\vspace{-.2in}
  		
 % 		
 % 		\begin{tabular}{c c}
@@ -832,7 +817,6 @@ Figure~\ref{fig:noise} shows the effect of varying total flux density, and thus 
  				Since absolute position is lost during imaging, shifts in the reconstructed source location are expected. 
  				} }
  		\label{fig:patchprior}
- 		\vspace{-.35in}
  	\end{center}
  \end{figure}
  
@@ -840,7 +824,6 @@ Figure~\ref{fig:noise} shows the effect of varying total flux density, and thus 
  
  
  
- \vspace{-.15in}
  \paragraph{Effect of Patch Prior} Flexibility of the patch prior framework allows us to easily incorporate a variety of different ``visual" assumptions in our reconstructed image.
  %on what we expect to see in $I_{\lambda}$. 
  For instance, in the case of the EHT, simulations of a black hole for different inclinations and spins can be used to train a patch model that can be subsequently used for reconstruction. 
@@ -903,9 +886,7 @@ Alternatively, we are able to use bispectrum measurements to automatically produ
 \end{figure}
 
 
-\vspace{-.1in}
 \section{Conclusion}
-\vspace{-.1in}
 Astronomical imaging will benefit from the cross-fertilization of ideas with the computer vision community. 
 %By bridging the gap between astronomy and computer vision, our work initiates the transfer of ideas developed in computer vision to applications in VLBI.
 In this paper, we have presented an algorithm, CHIRP, for reconstructing an image using a very sparse number of VLBI frequency constraints.
