--- a/1711.01357/paperparts/figures/compare_1_new.tex
+++ b/1711.01357/paperparts/figures/compare_1_new.tex
@@ -1,6 +1,6 @@
 \begin{figure*}
 	\begin{center}
-	%	\vspace{-0.5in}
+		\vspace{-0.5in}
 		%\hspace*{-2.3cm}
 		\setlength{\tabcolsep}{3pt}
 		
@@ -156,7 +156,7 @@
 			\includegraphics[height=.1\linewidth]{figures/starwarps_results/hotakamovie_45/ehtfuture1_100_compare/none_amp-clphase_blur025.pdf} 
 			\\ 
 		\end{tabular}
-		\caption{{\bf Static evolution model:} Results obtained using data simulated from each of the 4 video sequences (see Figure~\ref{fig:groundtruth}) under different telescope arrays (see Figures~\ref{fig:staticimaging} and~\ref{fig:uvcov2}) and noise conditions. The main portion of the figure is broken up into 4 quadrants corresponding to Videos 1-4 when moving from left to right, top to bottom. The true mean image from the ground truth videos, blurred to 3/4 the nominal resolution of the array, is shown on the top. We compare results of our proposed method, StarWarps, to that of the single imaging methods presented in~\cite{freek} and~\cite{andrew}. In particular, we compare the mean image obtained using StarWarps video reconstruction. The error type NO ATM. indicates reconstructing using visibilities on data with no atmospheric error, while the error type ATM. indicates using the visibility amplitudes and bispectrum on data where atmospheric phase errors have been introduced. The quality of each result, compared to the ground truth mean image, is indicated in the table of normalized root mean squared errors (Normalized RMSE). To account for the loss of absolute position in the presence of atmospheric phase error, images were rigidly aligned to the true mean before computing the error. The FOV and colorbar used for each reconstruction can be seen in Figure~\ref{fig:groundtruth}. }
+		\caption{\scriptsize{\bf Static evolution model:} Results obtained using data simulated from each of the 4 video sequences (see Figure~\ref{fig:groundtruth}) under different telescope arrays (see Figures~\ref{fig:staticimaging} and~\ref{fig:uvcov2}) and noise conditions. The main portion of the figure is broken up into 4 quadrants corresponding to Videos 1-4 when moving from left to right, top to bottom. The true mean image from the ground truth videos, blurred to 3/4 the nominal resolution of the array, is shown on the top. We compare results of our proposed method, StarWarps, to that of the single imaging methods presented in~\cite{freek} and~\cite{andrew}. In particular, we compare the mean image obtained using StarWarps video reconstruction. The error type NO ATM. indicates reconstructing using visibilities on data with no atmospheric error, while the error type ATM. indicates using the visibility amplitudes and bispectrum on data where atmospheric phase errors have been introduced. The quality of each result, compared to the ground truth mean image, is indicated in the table of normalized root mean squared errors (Normalized RMSE). To account for the loss of absolute position in the presence of atmospheric phase error, images were rigidly aligned to the true mean before computing the error. The FOV and colorbar used for each reconstruction can be seen in Figure~\ref{fig:groundtruth}. }
 		\label{fig:staticevolutionresults}
 	\end{center}
 \end{figure*}
