--- a/0703160/0703160.tex
+++ b/0703160/0703160.tex
@@ -4,12 +4,31 @@
 %\documentclass[aps,preprint,prl,epsfig]{revtex4}
 %\documentclass[aaas,preprint,science,epsfig]{revtex4}
 %\documentclass[aps,twocolumn,prl,epsfig]{revtex4}
-\documentclass[aps,twocolumn,pra]{revtex4}
+\documentclass[aps,twocolumn,pra,onecolumn,12pt]{revtex4}
 %\def\lsim{\mathrel{\raise2pt\hbox to 8pt{\raise -5pt\hbox{$\sim$}\hss{$<$}}}}
 %%%%\renewcommand{\baselinestretch}{1.8}
 %%%%\draft
 %\input BoxedEPS
 %\SetTexturesEPSFSpecial
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
 
 \usepackage{epsf}
 \usepackage{amsfonts}
@@ -17,7 +36,6 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{amsmath}
-\usepackage[bookmarksnumbered, bookmarks, breaklinks, linktocpage]{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%
 %SOME USEFUL SHORTCUTS
