--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-04-13 08:05:02 -0400 
+%% Created for Pete Su at 2019-04-28 10:08:21 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Zurek:2007bs,
+	Archiveprefix = {arXiv},
+	Author = {Zurek, Wojciech Hubert},
+	Date-Added = {2019-04-28 10:07:10 -0400},
+	Date-Modified = {2019-04-28 10:07:58 -0400},
+	Doi = {10.1103/PhysRevA.76.052110},
+	Eprint = {quant-ph/0703160},
+	Journal = {Phys. Rev.},
+	Note = {\href{https://arxiv.org/abs/quant-ph/0703160}{arxiv.org/abs/quant-ph/0703160}},
+	Pages = {052110},
+	Primaryclass = {QUANT-PH},
+	Slaccitation = {%%CITATION = QUANT-PH/0703160;%%},
+	Title = {{Quantum origin of quantum jumps: Breaking of unitary symmetry induced by information transfer and the transition from quantum to classical}},
+	Volume = {A76},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevA.76.052110}}
 
 @incollection{KNUTH1980197,
 	Address = {San Diego},
