--- a/1206.1084/Overview_of_Bohmian_Mechanics.tex
+++ b/1206.1084/Overview_of_Bohmian_Mechanics.tex
@@ -9,9 +9,29 @@
 %%
 %\documentclass[twocolumn,secnumarabic,amssymb, nobibnotes, aps, prd]{revtex4-1}
 
-\documentclass[nofootinbib, secnumarabic, amsmath, nobibnotes,10pt,aps,pra]{revtex4-1}
+\documentclass[nofootinbib, secnumarabic, amsmath, nobibnotes,12pt,aps,pra]{revtex4-1}
 %\documentclass[secnumarabic,amsmath, nobibnotes, nofootinbib]{revtex4-1}
 %\usepackage{acrofont}%NOTE: Comment out this line for the release version!
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+
 
 \usepackage{graphicx}
 %\usepackage{epsfig}
