--- a/1205.1992/1205.1992.tex
+++ b/1205.1992/1205.1992.tex
@@ -8,6 +8,24 @@
 \setlength{\evensidemargin}{0.1in}
 \setlength{\topmargin}{-0.2in}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage{mathpazo}
+
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\sloppy
 
 %\documentclass{psp-rv975x65}
 %\copyline{Applied Bohmian Mechanics: From Nanoscale Systems to %Cosmology}{2009}{978-981-nnnn-nn-n}
