--- a/1206.1084/Overview_of_Bohmian_Mechanics.tex
+++ b/1206.1084/Overview_of_Bohmian_Mechanics.tex
@@ -9,7 +9,7 @@
 %%
 %\documentclass[twocolumn,secnumarabic,amssymb, nobibnotes, aps, prd]{revtex4-1}
 
-\documentclass[nofootinbib, secnumarabic, amsmath, nobibnotes,12pt,aps,pra]{revtex4-1}
+\documentclass[onecolumn,nofootinbib, secnumarabic, amsmath, nobibnotes,12pt,aps,pra]{revtex4-1}
 %\documentclass[secnumarabic,amsmath, nobibnotes, nofootinbib]{revtex4-1}
 %\usepackage{acrofont}%NOTE: Comment out this line for the release version!
 
@@ -26,6 +26,24 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+
+\makeatletter
+\def\footnotesize{%
+  \@setfontsize\footnotesize\@xpt{11.5pt}%
+  \abovedisplayskip 10\p@ \@plus2\p@ \@minus5\p@
+  \belowdisplayskip \abovedisplayskip
+  \abovedisplayshortskip \z@ \@plus3\p@
+  \belowdisplayshortskip 6\p@ \@plus3\p@ \@minus3\p@
+  \def\@listi{%
+    \leftmargin\leftmargini
+    \topsep 6\p@ \@plus2\p@ \@minus2\p@
+    \parsep 3\p@ \@plus2\p@ \@minus\p@
+    \itemsep \parsep
+  }%
+}%
+
+\makeatother
+
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
@@ -221,6 +239,8 @@ To give credit to both de Broglie and Bohm, some researchers refer to their work
 Some reputed researchers argue that de Broglie and Bohm did not provide the same exact presentation of the theory \cite{om.Valentini2006,om.valentini2008}. While de Broglie presented a first order development of the quantum trajectories (integrated from the velocity), Bohm himself did a second order (integrated from the acceleration) emphasizing the role of the quantum potential. The differences between both approaches appear when one considers initial ensembles of trajectories which are not in quantum equilibrium\footnote{Quantum equilibrium assumes that the initial positions and velocities of Bohmian trajectories are defined compatible with the initial wavefunction. Then the trajectories computed from Bohm's or de Broglie's formulations will become identical. However, if the quantum equilibrium hypothesis is not considered, one can select completely arbitrary initial positions from the (first order) de Broglie explanation and arbitrary initial velocities and positions from the (second order) Bohm work, see \sref{om.sec_single.6}.}. Except for this issue, which will not be addressed in this book, both approaches are identical.
 
 Many researchers prefer to use the name \emph{Bohmian mechanics} \cite{om.Bohmian1996}. It is perhaps the most popular name. We know directly from his alive collaborators, Basile Hiley and David Peat \cite{om.davidpeat}, that this name irritated David Bohm and he said about its own work ``\textit{it's Bohmian non-mechanics}''. He argued that the {\emph{'quantum potential'}} is a non-local potential that depends on the relative shape of the wavefunction and thus it is completely different from other mechanical (such as the gravitational or the electrostatic) potentials. See this particular discussion in the last chapters of Bohm and Hiley's book entitled \emph{The Undivided Universe: An Ontological Interpretation of Quantum Theory} \cite{om.Bohm1993}. He preferred the names \emph{causal} or \emph{ontological interpretation} of quantum mechanics \cite{om.Holand1993,om.Bohm1993}. The latter names emphasize the foundational aspects of its formulation of quantum mechanics.
+
+\newpage
 
 Finally, another very common term is \emph{quantum hydrodynamics} \cite{om.wyatt2005} that underlines the fact that Bohmian trajectories provide a mathematical relationship between the Schr\"odinger equation and fluid dynamics. In fact, this name is more appropriate when one refers to the Madelung's theory \cite{om.Madelung}, which is considered as a precursor of de Broglie's and Bohm's work, see \sref{om.sec_intro.9}.
 
