--- a/1803.00545v3/main_clean.tex
+++ b/1803.00545v3/main_clean.tex
@@ -20,7 +20,7 @@
 		amssymb,
 		aps,  
 		prb, 
-		floatfix,
+		floatfix,onecolumn
 	]{revtex4-1} 
 \fi
 
@@ -33,11 +33,29 @@
 \usepackage[utf8]{inputenc}   \usepackage[T1]{fontenc}
 \usepackage{textcomp}             
 \usepackage{bm}					\usepackage{enumerate}
-\usepackage[hidelinks]{hyperref}    \usepackage[mathlines]{lineno}	  \pdfoutput=1 					       
+\usepackage[mathlines]{lineno}	  \pdfoutput=1 					       
 \usepackage{graphicx}			
 \usepackage{multirow}
 \usepackage{dcolumn}			\usepackage[usenames, dvipsnames]{colortbl} 
 \usepackage[normalem]{ulem} 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 
 \ifUSEMULTIBIB
@@ -115,7 +133,6 @@
 
 
 
-\onecolumngrid
 \textbf{ 
 Quantum physics was invented to account for  
  two fundamental features of measurement results — their discreetness and  randomness. Emblematic of these features is Bohr’s idea of quantum jumps between two discrete energy levels of an atom\cite{Bohr1913}. Experimentally, quantum jumps were first observed in an  atomic ion driven by a weak deterministic force while under strong continuous energy measurement\cite{Nagourney1986, Sauter1986, Bergquist1986}. The times at which the discontinuous jump transitions occur are reputed to be fundamentally unpredictable. 
@@ -125,11 +142,6 @@ by monitoring the population of an auxiliary energy level coupled to the ground 
 Our results, which agree with theoretical predictions essentially without adjustable parameters,  support the modern quantum trajectory theory\cite{Carmichael1993, Gardiner1992-original-traj, Dalibard1992-original-traj, Plenio1998, Korotkov1999-original-traj} and  provide new ground for the exploration of real-time intervention techniques in the control of quantum systems, such as early detection of error syndromes.
 }
 \vspace{1em}
-\twocolumngrid
-
-
-
-
 
 
 Bohr conceived of quantum jumps \cite{Bohr1913} in 1913, and while Einstein elevated their hypothesis to the level of a quantitative rule with his AB coefficient theory\cite{Einstein1916, Einstein1917}, Schr\"{o}dinger strongly objected to their existence\cite{Schrodinger1952}. The nature and existence of quantum jumps remained a subject of controversy for seven decades until they were directly observed in a single system \cite{Nagourney1986, Sauter1986, Bergquist1986}. 
