--- a/1206.1084/Overview_of_Bohmian_Mechanics.tex
+++ b/1206.1084/Overview_of_Bohmian_Mechanics.tex
@@ -44,12 +44,16 @@ bookmarksopenlevel=10
 
 \makeatother
 
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
+\usepackage{amssymb}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
+% the lucida varphi is hideous
+\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
 \usepackage{graphicx}
 %\usepackage{epsfig}
