--- a/1803.00545v3/main_clean.tex
+++ b/1803.00545v3/main_clean.tex
@@ -12,14 +12,11 @@
 		linenumbers     
 	]{revtex4-1} 
 \else
-	\documentclass[
-		reprint,
+	\documentclass[12pt,
 		superscriptaddress, 
 		longbibliography,
 		amsmath, 
-		amssymb,
-		aps,  
-		prb, 
+		amssymb, aps, prb,
 		floatfix,onecolumn
 	]{revtex4-1} 
 \fi
@@ -124,25 +121,19 @@ bookmarksopenlevel=10
 \author{M.H. Devoret}
    \affiliation{Department of Applied Physics, Yale University, New Haven, Connecticut 06511, USA}
 
-\date{\today}
+\date{4-June-2019}
 
-\maketitle
-
-
-
-
-
-
-\textbf{ 
+\begin{abstract}
+\medskip\medskip
 Quantum physics was invented to account for  
  two fundamental features of measurement results — their discreetness and  randomness. Emblematic of these features is Bohr’s idea of quantum jumps between two discrete energy levels of an atom\cite{Bohr1913}. Experimentally, quantum jumps were first observed in an  atomic ion driven by a weak deterministic force while under strong continuous energy measurement\cite{Nagourney1986, Sauter1986, Bergquist1986}. The times at which the discontinuous jump transitions occur are reputed to be fundamentally unpredictable. 
 Can there be, despite the indeterminism of quantum physics, a possibility to know if a quantum jump is about to occur or not?
 Here, we answer this question affirmatively by experimentally demonstrating that the  jump from the ground to an excited state of a superconducting artificial three-level atom can be tracked as it follows a predictable ``flight,'' 
 by monitoring the population of an auxiliary energy level coupled to the ground state.  The experimental results demonstrate that the jump evolution when completed is continuous, coherent, and deterministic. Furthermore, exploiting these features and using real-time monitoring and feedback, we catch and reverse a quantum jump mid-flight, thus deterministically preventing its completion. 
 Our results, which agree with theoretical predictions essentially without adjustable parameters,  support the modern quantum trajectory theory\cite{Carmichael1993, Gardiner1992-original-traj, Dalibard1992-original-traj, Plenio1998, Korotkov1999-original-traj} and  provide new ground for the exploration of real-time intervention techniques in the control of quantum systems, such as early detection of error syndromes.
-}
-\vspace{1em}
+\end{abstract}
 
+\maketitle
 
 Bohr conceived of quantum jumps \cite{Bohr1913} in 1913, and while Einstein elevated their hypothesis to the level of a quantitative rule with his AB coefficient theory\cite{Einstein1916, Einstein1917}, Schr\"{o}dinger strongly objected to their existence\cite{Schrodinger1952}. The nature and existence of quantum jumps remained a subject of controversy for seven decades until they were directly observed in a single system \cite{Nagourney1986, Sauter1986, Bergquist1986}. 
 Since then, quantum jumps have been observed in a variety of  atomic\cite{Basche1995, Peil1999, Gleyzes2007, Guerlin2007} and solid-state \cite{Jelezko2002, Neumann2010, Robledo2011, Vijay2011, Hatridge2013} systems.  
