--- a/1409.4232/JE_Gluon.tex
+++ b/1409.4232/JE_Gluon.tex
@@ -9,7 +9,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
 %\documentclass[wsdraft]{ws-rv975x65} % to draw border line around text area
-\documentclass{ws-rv975x65}
+\documentclass{ws-rv975x65}[12pt]
 \usepackage{anonchap}
 \usepackage{subfigure}     % required only when side-by-side / subfigures are used
 \usepackage[square]{ws-rv-van}     % numbered citation/references (default)
@@ -20,6 +20,23 @@
 \renewcommand*\thesection{\arabic{section}}
 \renewcommand*\thefigure{\arabic{figure}}
 \renewcommand*\theequation{\arabic{equation}}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+\linespread{1.05}
+\usepackage[letterpaper, margin=1.3in]{geometry}
 
 \begin{document}
 
@@ -157,7 +174,7 @@ No theorist seriously doubted the existence of the gluon, but direct proof of it
 a `smoking gluon', remained elusive.
 
 In parallel, jet physics was an emerging topic. Statistical evidence was found for two-jet events in low-energy
-electron–positron annihilation into hadrons at SPEAR at SLAC, which could be interpreted as $e^+ e^- \to {\bar q} q$~\cite{Hanson}.
+electron/positron annihilation into hadrons at SPEAR at SLAC, which could be interpreted as $e^+ e^- \to {\bar q} q$~\cite{Hanson}.
 It was expected that partons should manifest themselves in high-energy hadron-hadron collisions via the
 production of pairs of large transverse-momentum jets. However, these were proving elusive at the
 Intersecting Storage Rings (ISR), CERN's pioneering proton-proton collider.
@@ -165,15 +182,15 @@ It was known that the transverse-momentum spectrum of individual hadron producti
 exponential fall-off seen in earlier experiments, but the shape of the spectrum did not agree with the
 power-law fall-off predicted on the basis of the hard scattering of quarks and gluons,
 and no jets were visible. Thus, there were no signs of quarks at the ISR, let alone gluons,
-and rival theories – such as the constituent-interchange model~\cite{CIM}, in which the scattering objects were
-thought to be mesons – were being advocated.
+and rival theories---such as the constituent-interchange model~\cite{CIM}, in which the scattering objects were
+thought to be mesons---were being advocated.
 
 \section{The Three-Jet Idea}
 
 This was the context in 1976 when I was walking over the bridge from the CERN cafeteria
 back to my office one day. Turning the corner by the library, the thought occurred that the 
 simplest experimental situation to search directly for the gluon would be through production via 
-bremsstrahlung in electron–positron annihilation: $e^+ e^- \to {\bar q} q g$. What could be simpler?
+bremsstrahlung in electron/positron annihilation: $e^+ e^- \to {\bar q} q g$. What could be simpler?
 Together with Graham Ross and Mary Gaillard, we calculated the gluon bremsstrahlung process in QCD~\cite{EGR}, 
 see Fig.~\ref{Mercedes}, arguing that under the appropriate kinematic conditions at high energies, asymptotic freedom
 would guarantee that this would be the leading correction to the process $e^+ e^- \to {\bar q}q$ that
