--- a/1101.2599/mcreview.tex
+++ b/1101.2599/mcreview.tex
@@ -39,6 +39,25 @@
 % \usepackage{cite}
 \usepackage{subfigure}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+
 %% Use the option review to obtain double line spacing
 %% \documentclass[preprint,review,12pt]{elsarticle}
 
@@ -161,10 +180,10 @@
 \address[Heidelberg]{Institute for Theoretical Physics, University of Heidelberg, 69120 Heidelberg, Germany}
 \address[Manchester]{School of Physics and Astronomy, University of Manchester, M13 9PL, UK}
 \address[Cambridge]{Cavendish Laboratory, J.J.~Thomson Avenue, Cambridge CB3 0HE, UK}
+\hyphenation{perturb-ative}
 
 \begin{abstract}
-\hyphenation{perturb-ative}
-  We review the physics basis, main features and use of general-purpose
+We review the physics basis, main features and use of general-purpose
   Monte Carlo event generators for the simulation of
   proton-proton collisions at the Large Hadron Collider.
   Topics included are:
