--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-06-05 20:02:43 -0400 
+%% Created for Pete Su at 2019-06-10 22:46:48 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Buckley:2011ms,
+	Archiveprefix = {arXiv},
+	Author = {Buckley, Andy and others},
+	Date-Added = {2019-06-10 22:45:08 -0400},
+	Date-Modified = {2019-06-10 22:46:46 -0400},
+	Doi = {10.1016/j.physrep.2011.03.005},
+	Eprint = {1101.2599},
+	Journal = {Phys. Rept.},
+	Note = {\href{https://arxiv.org/abs/1101.2599}{arXiv:1101.2599}},
+	Pages = {145-233},
+	Primaryclass = {hep-ph},
+	Reportnumber = {CAVENDISH-HEP-10-21, CERN-PH-TH-2010-298, DCPT-10-202, IPPP-10-101, KA-TP-40-2010, LU-TP-10-28, MAN-HEP-2010-23, SLAC-PUB-14333, HD-THEP-10-24, MCNET-11-01},
+	Slaccitation = {%%CITATION = ARXIV:1101.2599;%%},
+	Title = {{General-purpose event generators for LHC physics}},
+	Volume = {504},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.physrep.2011.03.005}}
 
 @article{Minev2019,
 	Author = {Z.~K. Minev and S.~O. Mundhada and S. Shankar and P. Reinhold and R. Guti{\'{e}}rrez-J{\'{a}}uregui and R.~J. Schoelkopf and M. Mirrahimi and H.~J. Carmichael and M.~H. Devoret},
