--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-06-10 22:46:48 -0400 
+%% Created for Pete Su at 2019-06-10 22:52:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ellis:2014rma,
+	Archiveprefix = {arXiv},
+	Author = {Ellis, John},
+	Date-Added = {2019-06-10 22:51:45 -0400},
+	Date-Modified = {2019-06-10 22:52:52 -0400},
+	Doi = {10.1142/9789814618113_0012, 10.1142/S0217751X14300725},
+	Eprint = {1409.4232},
+	Journal = {Int. J. Mod. Phys.},
+	Note = {\href{https://arxiv.org/abs/1409.4232}{arxiv.org/abs/1409.4232}},
+	Number = {31},
+	Pages = {1430072},
+	Primaryclass = {hep-ph},
+	Reportnumber = {KCL-PH-TH-2014-36, LCTS-2014-35, CERN-PH-TH-2014-178},
+	Slaccitation = {%%CITATION = ARXIV:1409.4232;%%},
+	Title = {{The Discovery of the Gluon}},
+	Volume = {A29},
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1142/9789814618113_0012,%2010.1142/S0217751X14300725}}
 
 @article{Buckley:2011ms,
 	Archiveprefix = {arXiv},
