--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-06-13 07:44:31 -0400 
+%% Created for Pete Su at 2019-06-20 06:52:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wells:2016exe,
+	Archiveprefix = {arXiv},
+	Author = {Wells, James D.},
+	Date-Added = {2019-06-20 06:52:04 -0400},
+	Date-Modified = {2019-06-20 06:52:35 -0400},
+	Eprint = {1609.04268},
+	Note = {\href{https://arxiv.org/abs/1609.04268v1}{arXiv:1609.04268v1}},
+	Primaryclass = {physics.hist-ph},
+	Reportnumber = {DESY-16-176, MCTP-16-20},
+	Slaccitation = {%%CITATION = ARXIV:1609.04268;%%},
+	Title = {{The theoretical physics ecosystem behind the discovery of the Higgs boson}},
+	Year = {2016}}
 
 @book{Glimm1985,
 	Author = {James Glimm and Arthur Jaffe},
