--- a/9309067v1/9309067v1.tex
+++ b/9309067v1/9309067v1.tex
@@ -2,7 +2,30 @@
 %From: jbaez@BOURBAKI.MIT.EDU
 %Date: Fri, 10 Sep 1993 18:06:36 -0400 (EDT)
 
-
+\documentclass[12pt]{article}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+\tolerance=2000
+\usepackage{titlesec}
+\titleformat{\section}
+  {\normalfont\bfseries\filcenter}{\thesection}{2em}{}
+  
 %prepared in LaTeX
 
 	\hfuzz = 6pt
@@ -10,7 +33,7 @@
 	\newcommand\Hom{{\rm Hom}}
 	\newcommand{\ban}{\begin{eqnarray*}}
         \newcommand{\ean}{\end{eqnarray*}}
-	\def\section#1{\vskip3em{\centerline {\bf#1}}\vskip3em}
+	%\def\section#1{\vskip3em{\centerline {\bf#1}}\vskip3em}
 
 	%\newfam\msyfam
 	%\font\tenmsy=msym10
@@ -68,15 +91,6 @@
 	\newcommand{\Fun}{{\rm Fun}}
 	\newtheorem{theorem}{Theorem}
 
-	\documentstyle[12pt]{article}
-	\textwidth 6in
-	\textheight 8.5in
-	\evensidemargin .25in
-	\oddsidemargin .25in
-	\topmargin .25in
-	\headsep 0in
-	\headheight 0in
-	\footskip .5in
 	%If you want 1.5-spaced copy, put in the next two lines.
 	%\parskip 1.75\parskip plus 3pt minus 1pt
 	%\renewcommand{\baselinestretch}{1.5}
