continuum_arxiv_3 plus some pdfs

--- a/1609.01421v3/continuum_arxiv_3.tex
+++ b/1609.01421v3/continuum_arxiv_3.tex
@@ -2,7 +2,28 @@
 % John Baez
 % 2018/1/2 - third arXiv version; first version send to Mathieu Anel and Gabriel Catren
 
-\documentclass{article}
+\documentclass[12pt]{article}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+\usepackage{titlesec}
+\titleformat{\section}
+  {\normalfont\large\bfseries}{\thesection}{1em}{}
 
 \hfuzz = 9pt
 \renewcommand{\arraystretch}{1.3}
@@ -20,12 +41,7 @@
 \definecolor{myurlcolor}{rgb}{0.6,0,0}
 \definecolor{mycitecolor}{rgb}{0,0,0.8}
 \definecolor{myrefcolor}{rgb}{0,0,0.8}
-\usepackage[bookmarks=false]{hyperref}
 %\usepackage[pagebackref,hypertexnames=true]{hyperref}
-\hypersetup{colorlinks,
-linkcolor=myrefcolor,
-citecolor=mycitecolor,
-urlcolor=myurlcolor}
 
 % references
 
@@ -92,7 +108,7 @@ urlcolor=myurlcolor}
   \vspace{0.3cm}   
   {\small email:  baez@math.ucr.edu \\} 
   \vspace{0.3cm}   
-  {\small \today}
+  {\small {January 2, 2018}}
   \vspace{0.3cm}   
 \end{center}   
 
@@ -854,7 +870,7 @@ I thank Flip Tancredo for his Feynman diagram package, and Emory Bunn and Greg W
 \bibitem{Abraham1905} M.\ Abraham, \textsl{Theorie der Elektrizit\"at: Elektromagnetische Theorie der Strahlung}, Teubner, Leipzig, 1905.  Also available at 
 \href{https://archive.org/details/theoriederelekt04fpgoog}{https://archive.org/details/theoriederelekt04fpgoog}
 
-\bibitem{AHKN} T.\ Aoyama, M.\ Hayakawa, T.\ Kinoshita and M.\ Nio, Tenth-order QED contribution to the electron $g−2$ and an improved value of the fine structure constant, \textsl{Phys.\ Rev.\ Lett.\ }\textbf{109} (2012), 111807 . Also available as \href{http://arxiv.org/abs/1205.5368}{arXiv:1205.5368}.
+\bibitem{AHKN} T.\ Aoyama, M.\ Hayakawa, T.\ Kinoshita and M.\ Nio, Tenth-order QED contribution to the electron $g-2$ and an improved value of the fine structure constant, \textsl{Phys.\ Rev.\ Lett.\ }\textbf{109} (2012), 111807 . Also available as \href{http://arxiv.org/abs/1205.5368}{arXiv:1205.5368}.
 
 \bibitem{AristotleZeno1} Aristotle, \textsl{Physics} VI:9, 239b10.  Available at  \href{http://classics.mit.edu/Aristotle/physics.6.vi.html\#761}{http://classics.mit.edu/\break Aristotle/physics.6.vi.html\#761}.
  
