--- a/9309067v1/9309067v1.tex
+++ b/9309067v1/9309067v1.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 \tolerance=2000
 \usepackage{titlesec}
 \titleformat{\section}
-  {\normalfont\bfseries\filcenter}{\thesection}{2em}{}
+  {\normalfont\bfseries\filcenter}{\thesection}{.75em}{}
   
 %prepared in LaTeX
 
