--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-06-20 06:52:35 -0400 
+%% Created for Pete Su at 2019-06-23 08:27:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{isham1995lectures,
+	Author = {Isham, C.J.},
+	Date-Added = {2019-06-23 08:27:42 -0400},
+	Date-Modified = {2019-06-23 08:27:42 -0400},
+	Isbn = {9781860940019},
+	Lccn = {95025184},
+	Publisher = {Imperial College Press},
+	Title = {Lectures on Quantum Theory: Mathematical and Structural Foundations},
+	Url = {https://books.google.com/books?id=xR3sS2hEFzcC},
+	Year = {1995},
+	Bdsk-Url-1 = {https://books.google.com/books?id=xR3sS2hEFzcC}}
 
 @article{Wells:2016exe,
 	Archiveprefix = {arXiv},
