--- a/1409.4232/JE_Gluon.tex
+++ b/1409.4232/JE_Gluon.tex
@@ -9,7 +9,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
 %\documentclass[wsdraft]{ws-rv975x65} % to draw border line around text area
-\documentclass{ws-rv975x65}[12pt]
+\documentclass[12pt]{article} %{ws-rv975x65}[12pt]
 \usepackage{anonchap}
 \usepackage{subfigure}     % required only when side-by-side / subfigures are used
 \usepackage[square]{ws-rv-van}     % numbered citation/references (default)
@@ -17,9 +17,10 @@
 \makeindex
 %\newindex{aindx}{adx}{and}{Author Index}       % author index
 %\renewindex{default}{idx}{ind}{Subject Index}  % subject index
-\renewcommand*\thesection{\arabic{section}}
+%\renewcommand*\thesection{\arabic{section}}
 \renewcommand*\thefigure{\arabic{figure}}
 \renewcommand*\theequation{\arabic{equation}}
+\usepackage{graphicx}
 
 \usepackage{charter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
@@ -43,20 +44,20 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 \linespread{1.05}
 \usepackage[letterpaper, margin=1.3in]{geometry}
+\usepackage{titlesec}
+\titleformat{\section}
+  {\normalfont\large\bfseries}{\thesection.}{.75em}{}
 
 \begin{document}
 
-\chapter*{The Discovery of the Gluon}
+\title{The Discovery of the Gluon}
+\date{2014 March 05}
 
-\author[John Ellis]{John Ellis}%\footnote{Author footnote.}}
+\author{John Ellis}%\footnote{Author footnote.}}
 %\index[aindx]{Author, F.} % or \aindx{Author, F.}
 %\index[aindx]{Author, S.} % or \aindx{Author, S.}
 
-\address{Theoretical Particle Physics and Cosmology Group, Department of
-  Physics, King's~College~London, London WC2R 2LS, United Kingdom\\
-\& Theory Division, CERN, CH-1211 Geneva 23,
-  Switzerland, \\
-John.Ellis@cern.ch}%\footnote{Affiliation footnote.}}
+\maketitle
 
 \begin{abstract}
 Soon after the postulation of quarks, it was suggested that they interact via
@@ -70,8 +71,9 @@ at the PETRA collider. \\ \\
 
 
 \end{abstract}
+
+
 %\markright{Customized Running Head for Odd Page} % default is Chapter Title.
-\body
 
 \section{Quarks are Not Enough}\label{ra_sec1}
 
