--- a/1805.03287/main.tex
+++ b/1805.03287/main.tex
@@ -7,7 +7,7 @@
 %
 %%   See the REVTeX 4.1 README file for restrictions and more information.
 %%
-\documentclass[secnumarabic,amssymb, nobibnotes, prl,twocolumn]{revtex4-1}
+\documentclass[secnumarabic,amssymb, nobibnotes, prl,12pt]{revtex4-1}
 \pdfminorversion=5
 \pdfcompresslevel=9
 \pdfobjcompresslevel=2
@@ -23,7 +23,23 @@
 \newcommand{\macro}[1]{\texttt{\textbackslash#1}}
 \newcommand{\m}[1]{\macro{#1}}
 \newcommand{\env}[1]{\texttt{#1}}
-\setlength{\textheight}{9.5in}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
 
 \begin{document}
 
